bootstrap/argo-cd/armch-amd64.yaml
# schedule to amd64, avoid arm
apiVersion: apps/v1
kind: Deployment
metadata:
  name: *
  labels:
    app.kubernetes.io/instance: argo-cd
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
