bootstrap/argo-cd/argocd-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argo-ingressroute
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argo.l5ug.nom.cx`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
  tls:
    certResolver: myresolver
